@@ -4,6 +4,7 @@
 	* tests/mpf/reuse.c (dsi_func): Exercise pow_ui.
 
 	* tests/mpf/t-set_ui.c (check_data): LONG_HIGHBIT -> ULONG_HIGHBIT.
+	* tests/mpf/t-set.c (check_random): New check, both set and init_set.
 
 2012-05-16  Torbjorn Granlund  <tege@gmplib.org>
 
